[package]
name = "ReentryUDP"
version = "0.2.0"
edition = "2024"
authors = ["Martin Sundhaug <martinsundhaug@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/ReentryGame/ReentryUDP"
homepage = "https://github.com/ReentryGame/ReentryUDP"
description = "A UDP library for ReEntry, an orbital simulator"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reentryudp"
path = "src/lib.rs"

[[bin]]
name = "reentryudp_blinker"
path = "src/blinker.rs"

[dependencies]
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
strum = "0.26"
strum_macros = "0.26"
